[package]
name = "physics-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "physics_demo"
path = "src/main.rs"

[lib]
name = "physics_engine"
path = "src/physics/lib.rs"

[dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["gfx", "image", "unsafe_textures"]
